--- a/example/css/style.css
+++ b/example/css/style.css
@@ -20,14 +20,51 @@
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
-body {
-    height:100%;
-    margin:0px;
-    padding:0px;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+#container {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+#title {
+    background: #f1f1f1;
     width:100%;
+    height: 100px;
+    line-height: 100px;
+    vertical-align: middle;
+    font-size: 2em;
+}
+
+#status {
+    height: 50px;
+    line-height: 50px;
+    vertical-align: middle;
+    font-size: 1.17em;
 }
 
 .onoffswitch {
+    display: none;
     position: relative; width: 90px;
     -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
 }
@@ -35,6 +72,7 @@ body {
     display: none;
 }
 .onoffswitch-label {
+    text-align: left;
     display: block; overflow: hidden; cursor: pointer;
     border: 2px solid #999999; border-radius: 20px;
 }
