--- a/example/css/index.css
+++ b/example/css/index.css
@@ -39,6 +39,7 @@ time, mark, audio, video {
     font-size: 100%;
     font: inherit;
     vertical-align: baseline;
+    font-family: "Courier New", Courier, monospace;;
 }
 
 #container {
